# OS-lab2

./: CMakeLists.txt  README.md
include/: thread_functions.h
src/: main.cpp  thread_functions.cpp
tests/: test_threads.cpp
